--- a/backend/foodgramm/requirements.txt
+++ b/backend/foodgramm/requirements.txt
@@ -11,9 +11,9 @@ django-colorfield==0.7.2
 django-filter==22.1
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
-djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 flake8==5.0.4
+gunicorn==20.1.0
 idna==3.4
 itypes==1.2.0
 Jinja2==3.1.2
@@ -21,6 +21,7 @@ MarkupSafe==2.1.1
 mccabe==0.7.0
 oauthlib==3.2.2
 Pillow==9.2.0
+psycopg2-binary==2.8.6
 pycodestyle==2.9.1
 pycparser==2.21
 pyflakes==2.5.0
