--- a/backend/foodgramm/requirements.txt
+++ b/backend/foodgramm/requirements.txt
@@ -8,6 +8,7 @@ cryptography==38.0.1
 defusedxml==0.7.1
 Django==4.1.2
 django-colorfield==0.7.2
+django-cors-headers==3.13.0
 django-filter==22.1
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
@@ -21,13 +22,16 @@ MarkupSafe==2.1.1
 mccabe==0.7.0
 oauthlib==3.2.2
 Pillow==9.2.0
+# psycopg2==2.9.5
 psycopg2-binary==2.8.6
 pycodestyle==2.9.1
 pycparser==2.21
 pyflakes==2.5.0
 PyJWT==2.6.0
+python-dotenv==0.21.0
 python3-openid==3.2.0
 pytz==2022.5
+reportlab==3.6.12
 requests==2.28.1
 requests-oauthlib==1.3.1
 six==1.16.0
