--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,5 +1,29 @@
 server {
     listen 80;
+
+    server_name localhost;
+    server_tokens off;
+
+    location /static/admin/ {
+        root /var/html/;
+    }
+
+    location /media/ {
+        root /var/html/;
+    }
+
+    location /admin/ {
+        proxy_pass http://web:8000/admin/;
+    }
+
+    location /api/ {
+        proxy_pass http://web:8000/api/;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
