--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -23,3 +23,27 @@ jobs:
       - name: Test with flake8
         run: |
           python -m flake8
+          
+  build_and_push_to_docker_hub:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: [tests]
+    
+    steps:
+      - name: Clon repo
+        uses: actions/checkout@v2
+      - name: Set up Docker buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login Docker
+        uses: docker/login-action@v2.1.0
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push Docker image to Docker hub
+        uses: docker/build-push-action@v3
+        with:
+          context: ./backend/foodgramm/
+          push: True
+          tags: ortkiv/web:v1
+        
