--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -46,4 +46,46 @@ jobs:
           context: ./backend/foodgramm/
           push: True
           tags: ortkiv/web:v1
+          
+  deploy:
+    name: Deploy project
+    runs-on: ubuntu-latest
+    needs: [build_and_push_to_docker_hub]
+    
+    steps:
+      - name: Clon repo
+        uses: actions/checkout@v2
+      - name: Copy files Via SSH Key
+        uses: appleboy/scp-action@master
+        with:
+          username:         ${{ secrets.USER }}
+          host:             ${{ secrets.HOST }}
+          passphrase:       ${{ secrets.PASSPHRASE }}
+          key:              ${{ secrets.SSH_KEY }}
+          source:           "infra/docker-compose.yaml,infra/nginx/"
+          target:           "."
+          strip_components: 1
+      - name: Executing Remote SSH CommandS Using SSH Key
+        uses: appleboy/ssh-action@v0.1.5
+        with:
+          username:   ${{ secrets.USER }}
+          host:       ${{ secrets.HOST }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          key:        ${{ secrets.SSH_KEY }}
+          script:     |
+            sudo docker-compose stop
+            sudo docker-compose rm -f web
+            sudo docker-compose pull web
+            sudo rm .env
+            touch .env
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            echo DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }} >> .env
+            echo DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }} >> .env
+            echo DJANGO_SUPERUSER_EMAIL=${{ secrets.DJANGO_SUPERUSER_EMAIL }} >> .env
+            sudo docker-compose up -d
         
