--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    server_name localhost;
+    server_name 158.160.9.27;
     server_tokens off;
 
     location /static/admin/ {
