--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -76,7 +76,7 @@ jobs:
             sudo docker-compose stop
             sudo docker-compose rm -f web
             sudo docker-compose pull web
-            sudo rm .env
+            rm .env
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
