--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: 3.9
       - name: Install dependencies
         run: |
-          cd backend/foodgramm/
+          cd backend/
           python -m pip install --upgrade pip
           pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
           pip install -r requirements.txt
@@ -43,7 +43,7 @@ jobs:
       - name: Push Docker image to Docker hub
         uses: docker/build-push-action@v3
         with:
-          context: ./backend/foodgramm/
+          context: ./backend/
           push: True
           tags: ortkiv/web:v1
           
