--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,4 +12,4 @@ RUN pip3 install -r requirements.txt --no-cache-dir
 
 COPY . .
 
-ENTRYPOINT ["chmod", "+x", "/usr/src/app/web/docker-entrypoint.sh"]
+CMD ["gunicorn", "foodgramm.wsgi:application", "--bind", "0:8000" ]
