--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -75,7 +75,7 @@ jobs:
           script:     |
             sudo docker-compose stop
             sudo docker-compose rm -f web
-            sudo docker-compose pull ${{ secrets.DOCKER_USERNAME }}/web
+            sudo docker-compose pull web
             sudo rm .env
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
