--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,9 +10,9 @@ COPY requirements.txt .
 
 RUN pip3 install -r requirements.txt --no-cache-dir
 
-RUN chmod 777 docker-entrypoint.sh
+RUN chmod 777 /usr/src/app/web/docker-entrypoint.sh
 
-RUN ls -l docker-entrypoint.sh
+RUN ls -l /usr/src/app/web/docker-entrypoint.sh
 
 COPY . .
 
