--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,13 +6,13 @@ RUN apt install -y netcat
 
 WORKDIR /usr/src/app/web
 
+RUN chmod 777docker-entrypoint.sh
+
+RUN ls -l docker-entrypoint.sh
+
 COPY requirements.txt .
 
 RUN pip3 install -r requirements.txt --no-cache-dir
-
-RUN chmod 777 /usr/src/app/web/docker-entrypoint.sh
-
-RUN ls -l /usr/src/app/web/docker-entrypoint.sh
 
 COPY . .
 
