--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -12,6 +12,10 @@ server {
         root /var/html/;
     }
 
+    location /static/rest_framework/ {
+        root /var/html/;
+    }
+
     location /admin/ {
         proxy_pass http://web:8000/admin/;
     }
