--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -30,7 +30,7 @@ services:
       - static_value:/var/html/static/
       - media_value:/var/html/media/
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ./docs/:/usr/share/nginx/html/api/docs/
 volumes:
   database_value:
   static_value:
