--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -4,6 +4,10 @@ server {
     server_name 158.160.9.27;
     server_tokens off;
 
+    location /static/colorfield/ {
+        root /var/html/;
+    }
+
     location /static/admin/ {
         root /var/html/;
     }
