--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,4 @@ per-file-ignores =
     */settings.py:E501
 max-complexity = 10
 [isort]
-known_first_party = foodgramm-project-react
-known_django = django
-sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+known_local_folder = foodgramm, ingredients, recipes, tags, users, utils
