--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,8 @@ exclude =
     venv/,
     env/
 per-file-ignores =
-    */settings.py:E501
+    */settings.py:E501,
+    ./backend/users/views.py:C901
 max-complexity = 10
 [isort]
 known_local_folder = foodgramm, ingredients, recipes, tags, users, utils
