поправил эндпоинты подписок

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ exclude =
     env/
 per-file-ignores =
     */settings.py:E501,
-    ./backend/users/views.py:C901
+    ./backend/users/views.py:C901, R505
 max-complexity = 10
 [isort]
 known_local_folder = foodgramm, ingredients, recipes, tags, users, utils
